[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Music/BGM.wav" type="AudioStream" id=1]
[ext_resource path="res://Audio Handler.gd" type="Script" id=2]

[node name="Audio Handler" type="Node2D"]
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="PlayerSFX" type="AudioStreamPlayer2D" parent="."]
max_distance = 700.0

[node name="TurretSFX" type="AudioStreamPlayer2D" parent="."]
max_distance = 700.0

[node name="BulletSFX" type="AudioStreamPlayer2D" parent="."]
max_distance = 700.0
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
